--- a/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
@@ -86,7 +86,6 @@
     <Content Include="Forms\Web Forms\frmChart.aspx" />
     <Content Include="Forms\Web Forms\frmDisableStation.aspx" />
     <Content Include="Forms\Web Forms\frmErrorLog.aspx" />
-    <Content Include="Forms\Web Forms\frmShipmentInfoALl.aspx" />
     <Content Include="Forms\Web Forms\frmShipmentInfoDetails.aspx" />
     <Content Include="Forms\Web Forms\frmShippingInfo.aspx" />
     <Content Include="Forms\Web Forms\frmStationDashBoard.aspx" />
@@ -95,21 +94,40 @@
     <Content Include="Forms\Web Forms\frmUserInformation.aspx" />
     <Content Include="Forms\Web Forms\frmHomePage.aspx" />
     <Content Include="Forms\Web Forms\frmLogin.aspx" />
-    <Content Include="Forms\Web Forms\frmShipmentDetail.aspx" />
-    <Content Include="Forms\Web Forms\frmShipmentDetailSage.aspx" />
     <Content Include="Forms\Web Forms\rptPacking.aspx" />
-    <Content Include="Forms\Web Forms\WebUserControl1.ascx" />
     <Content Include="Images\document-print.png" />
     <Content Include="Images\Kraus_Logo.jpg" />
     <Content Include="Images\logoKraus.png" />
     <Content Include="Images\main-bg.jpg" />
     <Content Include="Images\Search.png" />
+    <Content Include="Images\TrackingImages\Allocated.PNG" />
+    <Content Include="Images\TrackingImages\New.PNG" />
+    <Content Include="Images\TrackingImages\Packing.PNG" />
+    <Content Include="Images\TrackingImages\Picking.PNG" />
+    <Content Include="Images\TrackingImages\Shipped.PNG" />
+    <Content Include="Images\TrackingImages\Shipping.PNG" />
     <Content Include="Images\UserIcon.png" />
     <Content Include="Themes\CSS\BlackCoffeeCSS.css" />
     <Content Include="Themes\CSS\ddsmoothmenu.css" />
     <Content Include="Themes\js\highcharts.js" />
     <Content Include="Themes\js\jquery-1.5.1.min.js" />
     <Content Include="Themes\js\jquery.min.js" />
+    <Content Include="TreeLineImages\dash.gif" />
+    <Content Include="TreeLineImages\dashminus.gif" />
+    <Content Include="TreeLineImages\dashplus.gif" />
+    <Content Include="TreeLineImages\i.gif" />
+    <Content Include="TreeLineImages\l.gif" />
+    <Content Include="TreeLineImages\lminus.gif" />
+    <Content Include="TreeLineImages\lplus.gif" />
+    <Content Include="TreeLineImages\minus.gif" />
+    <Content Include="TreeLineImages\noexpand.gif" />
+    <Content Include="TreeLineImages\plus.gif" />
+    <Content Include="TreeLineImages\r.gif" />
+    <Content Include="TreeLineImages\rminus.gif" />
+    <Content Include="TreeLineImages\rplus.gif" />
+    <Content Include="TreeLineImages\t.gif" />
+    <Content Include="TreeLineImages\tminus.gif" />
+    <Content Include="TreeLineImages\tplus.gif" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -163,13 +181,6 @@
     </Compile>
     <Compile Include="Forms\Web Forms\frmErrorLog.aspx.designer.cs">
       <DependentUpon>frmErrorLog.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\Web Forms\frmShipmentInfoALl.aspx.cs">
-      <DependentUpon>frmShipmentInfoALl.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Forms\Web Forms\frmShipmentInfoALl.aspx.designer.cs">
-      <DependentUpon>frmShipmentInfoALl.aspx</DependentUpon>
     </Compile>
     <Compile Include="Forms\Web Forms\frmShipmentInfoDetails.aspx.cs">
       <DependentUpon>frmShipmentInfoDetails.aspx</DependentUpon>
@@ -227,20 +238,6 @@
     <Compile Include="Forms\Web Forms\frmLogin.aspx.designer.cs">
       <DependentUpon>frmLogin.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Web Forms\frmShipmentDetail.aspx.cs">
-      <DependentUpon>frmShipmentDetail.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Forms\Web Forms\frmShipmentDetail.aspx.designer.cs">
-      <DependentUpon>frmShipmentDetail.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\Web Forms\frmShipmentDetailSage.aspx.cs">
-      <DependentUpon>frmShipmentDetailSage.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Forms\Web Forms\frmShipmentDetailSage.aspx.designer.cs">
-      <DependentUpon>frmShipmentDetailSage.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Classes\PackingStat.cs" />
     <Compile Include="Forms\Web Forms\rptPacking.aspx.cs">
       <DependentUpon>rptPacking.aspx</DependentUpon>
@@ -248,13 +245,6 @@
     </Compile>
     <Compile Include="Forms\Web Forms\rptPacking.aspx.designer.cs">
       <DependentUpon>rptPacking.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\Web Forms\WebUserControl1.ascx.cs">
-      <DependentUpon>WebUserControl1.ascx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Forms\Web Forms\WebUserControl1.ascx.designer.cs">
-      <DependentUpon>WebUserControl1.ascx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
