--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -6,8 +6,7 @@
 <configuration>
   <system.web>
     <httpHandlers>
-      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"
-        validate="false" />
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false" />
     </httpHandlers>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
@@ -23,11 +22,10 @@
         <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
       </buildProviders>
     </compilation>
-    <httpRuntime targetFramework="4.5"/>
+    <httpRuntime targetFramework="4.5" />
   </system.web>
   <connectionStrings>
-    <add name="Sage_x3v6Entities" connectionString="metadata=res://*/Sage_x3v6.csdl|res://*/Sage_x3v6.ssdl|res://*/Sage_x3v6.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.7\x3v6;initial catalog=x3v6;persist security info=True;user id=etl_admin;password=d0ntl00k;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
+    <add name="Sage_x3v6Entities" connectionString="metadata=res://*/Sage_x3v6.csdl|res://*/Sage_x3v6.ssdl|res://*/Sage_x3v6.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.7\x3v6;initial catalog=x3v6;persist security info=True;user id=etl_admin;password=d0ntl00k;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!-- ################# NY String #############################      -->
     <!--<add name="local_x3v6Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string='data source=192.168.1.7\x3v6;initial catalog=&quot;Shipping Manager&quot;;persist security info=True;user id=etl_admin;password=d0ntl00k;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />-->
     
@@ -35,10 +33,11 @@
   <add name="local_x3v6Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.5.241;initial catalog=x3v6;persist security info=True;user id=sa;password=2wvcDW8j;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.webServer>
-    <directoryBrowse enabled="true"/>
-    <validation validateIntegratedModeConfiguration="false"/>
+    <directoryBrowse enabled="true" />
+    <validation validateIntegratedModeConfiguration="false" />
     <handlers>
-      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
+      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     </handlers>
+        <httpRedirect childOnly="true" />
   </system.webServer>
 </configuration>
