--- a/ShippingController(V1.0)/ShippingController(V1.0)/Service References/web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Service References/web.config
@@ -2,5 +2,12 @@
 <configuration>
     <system.webServer>
         <httpRedirect enabled="true" destination="http://192.168.5.66/Forms/Web%20Forms/frmDisableStation.aspx" />
+      <defaultDocument>
+        <files>
+          <add value="http://192.168.5.66/Forms/Web%20Forms/frmDisableStation.aspx"/>
+        </files>
+          
+      </defaultDocument>
     </system.webServer>
+  
 </configuration>
