--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -37,7 +37,7 @@
     <handlers>
       <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     </handlers>
-    <httpRedirect enabled="true" destination="http://192.168.5.26/Forms/Web%20Forms/frmLogin.aspx" exactDestination="true" childOnly="true" />
-        <defaultDocument enabled="false" />
+    <httpRedirect enabled="false" destination="http://192.168.5.66/Forms/Web%20Forms/frmLogin.aspx" exactDestination="true" childOnly="true" />
+        <defaultDocument enabled="true" />
   </system.webServer>
 </configuration>
