New classes and references added

--- a/PackingClassLibrary/App.Config
+++ b/PackingClassLibrary/App.Config
@@ -17,4 +17,21 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IGet" />
+        <binding name="BasicHttpBinding_ISave" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://192.168.5.66/KrausWarehouseServices.Service.Shipping.Get.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet"
+        contract="GetService.IGet" name="BasicHttpBinding_IGet" />
+      <endpoint address="http://192.168.5.66/KrausWarehouseServices.Service.Shipping.Save.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave"
+        contract="SetService.ISave" name="BasicHttpBinding_ISave" />
+    </client>
+  </system.serviceModel>
+</configuration>
