--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -40,4 +40,20 @@
     <httpRedirect enabled="false" destination="http://192.168.5.66/Forms/Web%20Forms/frmLogin.aspx" exactDestination="true" childOnly="true" />
         <defaultDocument enabled="true" />
   </system.webServer>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IGet" />
+        <binding name="BasicHttpBinding_ISave" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://192.168.5.66/KrausWarehouseServices.Service.Shipping.Get.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet"
+        contract="GetService.IGet" name="BasicHttpBinding_IGet" />
+      <endpoint address="http://192.168.5.66/KrausWarehouseServices.Service.Shipping.Save.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave"
+        contract="SetService.ISave" name="BasicHttpBinding_ISave" />
+    </client>
+  </system.serviceModel>
 </configuration>
