--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ ShippingController(V1.0)\ShippingController(V1.0)\obj\Release*/
 ShippingController(V1.0)\ShippingController(V1.0)\obj\Release*/
 ShippingController(V1.0)\ShippingController(V1.0)\obj\Release*/
 ShippingController(V1.0)\ShippingController(V1.0)\obj\Release*/
+ShippingController(V1.0)/ShippingController(V1.0)/bin/PackingClassLibrary.dll
+ShippingController(V1.0)/ShippingController(V1.0)/bin/PackingClassLibrary.pdb
+*.pdb
+*.dll
